force-app/main/default/objects/RD_Integral_BDI_Part_Number__c/fields/OrderDesc5__c.field-meta.xml
<CustomField>
    <fullName>OrderDesc5__c</fullName>
    <label>OrderDesc5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>