force-app/main/default/objects/RD_Integral_BDI_Part_Number__c/fields/OrderDesc6__c.field-meta.xml
<CustomField>
    <fullName>OrderDesc6__c</fullName>
    <label>OrderDesc6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>