force-app/main/default/objects/RD_Integral_BDI_Part_Number__c/fields/OutRingOnOff__c.field-meta.xml
<CustomField>
    <fullName>OutRingOnOff__c</fullName>
    <label>OutRingOnOff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>