force-app/main/default/objects/RD_Integral_BDI_Part_Number__c/fields/Seal_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Seal_Thickness__c</fullName>
    <label>Seal Thickness</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>